Partially format chapter 1 or willpower

--- a/nutrition.tex
+++ b/nutrition.tex
@@ -5,7 +5,7 @@
 \renewcommand*{\cftchaptername}{Правіла }
 
 \author{Андрусь Белавешкін}
-\title{Што і калі есьці.}
+\title{Што і калі есьці}
 \date{2020 Пераклад 2022}
 
 \begin{document}
@@ -15,7 +15,7 @@
 \cleartooddpage
 \begin{titlingpage}
   \TitlePageFormat{Андрусь\ \ Белавешкін}
-      {Што\ \ і\ \ калі\ \ есьці.}
+      {Што\ \ і\ \ калі\ \ есьці}
       {Як\ \ знайсьці\ \ залатую\ \ сярэдзіну між\ \ голадам\ \ і\ \ пераяданьнем}
       {2020, Пераклад 2022}
 
