--- a/nutrition/chapter5.tex
+++ b/nutrition/chapter5.tex
@@ -63,13 +63,13 @@
 \subsection{Як трымацца правіла? Ідэі і парады}
 
 \paragraph{Вячэрняе асьвятленьне.}
-Для правільнай работы цыркадных біярытмаў сьвятло ўдоме павінна па спэктры супадаць са сьвятлом на захадзе сонца, быць жоўтым, расьсеяным, няяркім. Для гэтага ўвечары трэба ўключаць не сьвятлодыёдныя лямпы, а~лямпы напальваньня, якія дадуць патрэбны спэктар. Але большую частку сьвятлодыёднага сьвятла даюць смартфоны, ноўтбукі, тэлевізары~--- для гэтага таксама ёсьць варыянты. Можна ўсталяваць праграмы накшталт f.lux, twilight\footnote{f.lux, twilight~--- гэта праграмы, што рэгулююць колеравую тэмпэратуру кампутарнага манітора ў адпаведнасьці з геаграфічным месцівам і часам сутак карыстальніка.}, скарыстацца функцыяй night shift. Але найлепшым варыянтам будзе купіць спэцыяльныя акуляры, якія блякуюць сінюю частку спэктру.
+Для правільнай работы цыркадных біярытмаў сьвятло ўдоме павінна па спэктры супадаць са сьвятлом на захадзе сонца, быць жоўтым, расьсеяным, няяркім. Для гэтага ўвечары трэба ўключаць не сьвятлодыёдныя лямпы, а~лямпы напальваньня, якія дадуць патрэбны спэктар. Але большую частку сьвятлодыёднага сьвятла даюць смартфоны, ноўтбукі, тэлевізары~--- для гэтага таксама ёсьць варыянты. Можна ўсталяваць праграмы накшталт f.lux, twilight\footnote{f.lux, twilight~--- гэта праграмы, што рэгулююць колеравую тэмпэратуру кампутарнага манітора ў~адпаведнасьці з~геаграфічным месцівам і часам сутак карыстальніка.}, скарыстацца функцыяй night shift. Але найлепшым варыянтам будзе купіць спэцыяльныя акуляры, якія блякуюць сінюю частку спэктру.
 
 \paragraph{Тэмпэратура ўвечары.}
 Тэмпэратура таксама зьяўляецца важным сыгналам для нашага цела. Тэмпэратура нашага асяродку павінна зьніжацца прыкладна зь 19-й. Усё, што замінае нам «астыць», будзе замінаць расслабіцца і заснуць. Таму такія парады, як пагуляць перад сном, праветрыць спальню, паменшыць інтэнсіўнасьць апалу,~--- выдатна працуюць.
 
 \paragraph{Стрэс увечары.}
-Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
+Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з~мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
 
 \paragraph{Кафеін.}
 Кафеін утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафеін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафеіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафеіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафеіну вельмі станоўча адаб'ецца на здароўе.
