--- a/willpower.tex
+++ b/willpower.tex
@@ -4,10 +4,15 @@
 
 \addto\captionsbelarusian{\renewcommand{\chaptername}{Разьдзел}} 
 \renewcommand*{\cftchaptername}{Разьдзел }
+\makeatletter
+\setlength{\cftbeforechapterskip}{5pt \@plus\p@}
+\makeatother
 
 \author{Андрусь Белавешкін}
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
+
+\includeonly{willpower/intro,willpower/chapter1}
 
 \begin{document}
 
@@ -19,8 +24,6 @@
       {Воля\ \ да\ \ жыцьця}
       {дапаможнік\ \ па\ \ усьвядомленным\ \ здароўі}
       {2020, Пераклад 2022}
-
-% \include{nutrition/summary}
 
 \end{titlingpage}
 
