Append chapter 4 to nutrition

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -100,6 +100,7 @@
   \thispagestyle{empty}
   \begin{vplace}
     \begin{center}
+      \spaceskip 12pt plus 2pt minus 1pt
       \begin{Spacing}{6.0}
       {\TitlePageHuge #1}
       \end{Spacing}
@@ -107,6 +108,7 @@
   \end{vplace}
 }
 \renewcommand{\partpageend}{
+  \spaceskip 4pt plus 2pt minus 1pt
   \afterpartskip
 }
 
